--- a/app/assets/stylesheets/home_page.css.scss.erb
+++ b/app/assets/stylesheets/home_page.css.scss.erb
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-body {
+body.home_page {
 	background-color: red;
+  background-image: url(<%= asset_path 'random_number.png' %>);
 }
